@@ -116,6 +116,13 @@ struct vaht_mov_s
 	uint8_t stco_count;
 };
 
+struct vaht_wav_adpcm_decode_state
+{
+	int32_t index;
+	int32_t predictor;
+	uint16_t step;
+};
+
 struct vaht_wav_s
 {
 	vaht_resource* res;
@@ -125,6 +132,8 @@ struct vaht_wav_s
 	uint8_t bits_per_sample;
 	uint8_t channels;
 	uint32_t data_seek;
+	
+	struct vaht_wav_adpcm_decode_state* adpcm_state[2];
 };
 
 #endif // __INCLUDE_VAHT_INTERN_H__
